# python-vimspector-debug-sample

./: .gitignore  .vimspector.json  LICENSE  README.md  pyproject.toml
app/: app.py
