[tool.poetry]
name = "python-vimspector-debug-sample"
version = "0.1.0"
description = "Debugging the FastAPI using Vimspector(sample)."
authors = ["Takashi Hanamura <t.nnamm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pyproject-flake8 = "^0.0.1-alpha.2"
pylint = "^2.12.1"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = [
    "W503", "W504",
    "E203"
]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "C0330"
]

[tool.isort]
profile = "black"
